# staticsite

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.py  staticsite.yaml
docs/: .sitehash.txt  bind.js  index.html
docs/examples/bundleJsAndCss/: index.html
docs/www/: index.html
examples/bundleJsAndCss/: staticsite.yaml
examples/bundleJsAndCss/src/: bundle.js  custom.js  index.html
examples/bundleJsAndCss/www/: bundle.js  custom.js  index.html
examples/twoWayDataBind/: staticsite.yaml
examples/twoWayDataBind/src/: bind.js  index.html
examples/twoWayDataBind/www/: bind.js  index.html
src/: .autoreload.html  .base.html  .examples.html  bind.js  index.html
src/css/: index.css
src/examples/: index.html
src/examples/bundleJsAndCss/: .custom.js.swp  .index.html.swp  bundle.js  custom.js  index.html
src/examples/twoWayDataBind/: bind.js  index.html
staticsite/: __main__.py  builder.py  discovery.py  plugins.py  watcher.py
www/css/: index.css
www/examples/: index.html
www/examples/bundleJsAndCss/: bundle.js  custom.js
www/examples/twoWayDataBind/: bind.js  index.html
